--- a/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/CaseLogReg_20250205.ipynb
+++ b/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/CaseLogReg_20250205.ipynb
@@ -614,56 +614,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gender  Smoking  Alcohol_Consumption  Physical_Activity_Level  Diabetes  Hypertension  Family_History  Stress_Level  Chest_Pain_Type  Thalassemia        Fasting_Blood_Sugar  ECG_Results                   Exercise_Induced_Angina  Heart_Attack_Risk\n",
-      "Male    0        0                    Low                      0         0             0               Moderate      Typical          Fixed defect       0                    Left Ventricular Hypertrophy  0                        Low                  15\n",
-      "Female  0        0                    Low                      0         0             0               Moderate      Asymptomatic     Fixed defect       0                    Left Ventricular Hypertrophy  0                        Low                  14\n",
-      "                                                                                                                                                                              Normal                        0                        Low                  13\n",
-      "                                      High                     0         0             0               Moderate      Asymptomatic     Normal             0                    Normal                        0                        Low                  13\n",
-      "                                      Low                      0         0             0               Moderate      Non-anginal      Normal             0                    Left Ventricular Hypertrophy  0                        Low                  13\n",
-      "Male    0        0                    Low                      0         0             0               Moderate      Asymptomatic     Normal             0                    ST-T abnormality              0                        Low                  13\n",
-      "Female  0        0                    Low                      0         0             0               Moderate      Non-anginal      Fixed defect       0                    ST-T abnormality              0                        Low                  13\n",
-      "Male    0        0                    Low                      0         0             0               Moderate      Non-anginal      Normal             0                    Normal                        0                        Low                  12\n",
-      "Female  0        0                    Low                      0         0             0               Moderate      Typical          Fixed defect       0                    Left Ventricular Hypertrophy  0                        Low                  12\n",
-      "Male    0        0                    Moderate                 0         0             0               Moderate      Asymptomatic     Normal             0                    ST-T abnormality              0                        Low                  12\n",
-      "                                      Low                      0         0             0               Moderate      Non-anginal      Fixed defect       0                    Normal                        0                        Low                  12\n",
-      "                                      Moderate                 0         0             0               Moderate      Atypical         Normal             0                    Normal                        0                        Low                  12\n",
-      "                                                                                                                     Non-anginal      Normal             0                    Normal                        0                        Low                  12\n",
-      "Female  0        0                    Low                      0         0             0               Low           Asymptomatic     Fixed defect       0                    Left Ventricular Hypertrophy  0                        Low                  12\n",
-      "                                      Moderate                 0         0             0               Moderate      Typical          Reversible defect  0                    Left Ventricular Hypertrophy  0                        Low                  12\n",
-      "                 1                    Moderate                 0         0             0               Moderate      Asymptomatic     Normal             0                    ST-T abnormality              0                        Low                  12\n",
-      "                 0                    Low                      0         0             0               Moderate      Atypical         Fixed defect       0                    Normal                        0                        Low                  12\n",
-      "                                                                                                                                      Normal             0                    Left Ventricular Hypertrophy  0                        Low                  12\n",
-      "                                      Moderate                 0         0             0               Moderate      Typical          Normal             0                    Left Ventricular Hypertrophy  0                        Low                  12\n",
-      "                 1                    Low                      0         0             0               Moderate      Asymptomatic     Reversible defect  0                    ST-T abnormality              0                        Low                  12\n",
-      "Male    0        0                    Low                      0         0             0               Moderate      Atypical         Normal             0                    Normal                        0                        Low                  11\n",
-      "Female  0        0                    Low                      0         0             0               Moderate      Typical          Fixed defect       0                    ST-T abnormality              0                        Low                  11\n",
-      "Male    0        0                    Low                      0         0             0               Moderate      Atypical         Reversible defect  0                    ST-T abnormality              0                        Low                  11\n",
-      "                                      Moderate                 0         0             0               Moderate      Asymptomatic     Reversible defect  0                    ST-T abnormality              0                        Low                  11\n",
-      "Female  0        0                    Low                      0         0             0               Moderate      Atypical         Fixed defect       0                    ST-T abnormality              0                        Low                  11\n",
-      "                                      Moderate                 0         0             0               Moderate      Asymptomatic     Normal             0                    ST-T abnormality              0                        Low                  11\n",
-      "Male    0        0                    Low                      0         0             0               Moderate      Non-anginal      Normal             0                    Left Ventricular Hypertrophy  0                        Low                  11\n",
-      "Female  0        0                    Moderate                 0         0             0               Low           Atypical         Normal             0                    Normal                        0                        Low                  11\n",
-      "Male    0        0                    Low                      0         0             0               Moderate      Asymptomatic     Fixed defect       0                    ST-T abnormality              0                        Low                  11\n",
-      "                                                                                                                     Atypical         Fixed defect       0                    Left Ventricular Hypertrophy  0                        Low                  11\n",
-      "                                      Moderate                 0         0             0               Moderate      Typical          Normal             0                    Left Ventricular Hypertrophy  0                        Low                  11\n",
-      "Female  0        0                    Moderate                 0         0             0               Moderate      Asymptomatic     Normal             0                    Left Ventricular Hypertrophy  0                        Low                  11\n",
-      "Male    0        0                    Moderate                 0         0             0               Moderate      Non-anginal      Fixed defect       0                    ST-T abnormality              0                        Low                  10\n",
-      "Female  0        0                    Low                      0         0             0               Low           Typical          Fixed defect       0                    Left Ventricular Hypertrophy  0                        Moderate             10\n",
-      "Male    0        0                    Moderate                 0         0             0               Moderate      Non-anginal      Reversible defect  0                    Normal                        0                        Low                  10\n",
-      "                 1                    Low                      0         0             0               Moderate      Typical          Fixed defect       0                    ST-T abnormality              0                        Low                  10\n",
-      "Female  0        0                    Low                      0         0             0               Moderate      Atypical         Reversible defect  0                    Left Ventricular Hypertrophy  0                        Low                  10\n",
-      "Male    0        0                    Moderate                 0         0             0               Moderate      Typical          Fixed defect       0                    Left Ventricular Hypertrophy  0                        Low                  10\n",
-      "Female  0        0                    Low                      0         0             0               Moderate      Asymptomatic     Reversible defect  0                    Left Ventricular Hypertrophy  0                        Low                  10\n",
-      "                                      Moderate                 0         0             0               Moderate      Asymptomatic     Normal             0                    Normal                        0                        Low                  10\n",
-      "Name: count, dtype: int64\n",
-      "(50000, 14)\n",
+      "   Gender_Female  Gender_Male  Smoking_0  Smoking_1  Alcohol_Consumption_0  \\\n",
+      "0            1.0          0.0        0.0        1.0                    1.0   \n",
+      "1            0.0          1.0        1.0        0.0                    1.0   \n",
+      "2            0.0          1.0        1.0        0.0                    0.0   \n",
+      "3            0.0          1.0        1.0        0.0                    0.0   \n",
+      "4            1.0          0.0        0.0        1.0                    1.0   \n",
+      "\n",
+      "   Alcohol_Consumption_1  Physical_Activity_Level_High  \\\n",
+      "0                    0.0                           0.0   \n",
+      "1                    0.0                           0.0   \n",
+      "2                    1.0                           0.0   \n",
+      "3                    1.0                           0.0   \n",
+      "4                    0.0                           0.0   \n",
+      "\n",
+      "   Physical_Activity_Level_Low  Physical_Activity_Level_Moderate  Diabetes_0  \\\n",
+      "0                          0.0                               1.0         0.0   \n",
+      "1                          0.0                               1.0         1.0   \n",
+      "2                          0.0                               1.0         1.0   \n",
+      "3                          0.0                               1.0         0.0   \n",
+      "4                          0.0                               1.0         1.0   \n",
+      "\n",
+      "   ...  Fasting_Blood_Sugar_0  Fasting_Blood_Sugar_1  \\\n",
+      "0  ...                    1.0                    0.0   \n",
+      "1  ...                    1.0                    0.0   \n",
+      "2  ...                    1.0                    0.0   \n",
+      "3  ...                    0.0                    1.0   \n",
+      "4  ...                    1.0                    0.0   \n",
+      "\n",
+      "   ECG_Results_Left Ventricular Hypertrophy  ECG_Results_Normal  \\\n",
+      "0                                       0.0                 1.0   \n",
+      "1                                       0.0                 0.0   \n",
+      "2                                       0.0                 0.0   \n",
+      "3                                       1.0                 0.0   \n",
+      "4                                       0.0                 0.0   \n",
+      "\n",
+      "   ECG_Results_ST-T abnormality  Exercise_Induced_Angina_0  \\\n",
+      "0                           0.0                        1.0   \n",
+      "1                           1.0                        1.0   \n",
+      "2                           1.0                        1.0   \n",
+      "3                           0.0                        1.0   \n",
+      "4                           1.0                        1.0   \n",
+      "\n",
+      "   Exercise_Induced_Angina_1  Heart_Attack_Risk_High  Heart_Attack_Risk_Low  \\\n",
+      "0                        0.0                     0.0                    1.0   \n",
+      "1                        0.0                     0.0                    0.0   \n",
+      "2                        0.0                     0.0                    1.0   \n",
+      "3                        0.0                     0.0                    1.0   \n",
+      "4                        0.0                     0.0                    0.0   \n",
+      "\n",
+      "   Heart_Attack_Risk_Moderate  \n",
+      "0                         0.0  \n",
+      "1                         1.0  \n",
+      "2                         0.0  \n",
+      "3                         0.0  \n",
+      "4                         1.0  \n",
+      "\n",
+      "[5 rows x 35 columns]\n",
       "(50000, 35)\n"
      ]
     }
@@ -672,23 +686,38 @@
     "# we gaan de nominale categorische variabelen omzetten naar een cijfer\n",
     "# via de Ordinal decoder. Er zit \n",
     "\n",
-    "print(df_cat.value_counts().sort_values(ascending=False).head(40))\n",
+    "# print(df_cat.value_counts().sort_values(ascending=False).head(40))\n",
     "\n",
     "\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "onehot_encoder = OneHotEncoder()\n",
+    "onehot_encoder = OneHotEncoder(sparse_output=False)\n",
     "ordinal_encoder = OrdinalEncoder()\n",
     "\n",
-    "df_cat_ordinal_encoded = ordinal_encoder.fit_transform(df_cat)\n",
-    "df_cat_onehot_encoded = onehot_encoder.fit_transform(df_cat)\n",
+    "# hier zouden we kunnen splitsen tussen de nominale categorische waarden en de ordinall\n",
+    "# bv smoking heeft reeds een waarde van 0 en 1, Diabetes\n",
     "\n",
-    "# print(df_cat_ordinal_encoded)\n",
-    "print(df_cat_ordinal_encoded.shape)\n",
+    "# dit geeft een numpy arrry terug\n",
+    "cat_encoded = onehot_encoder.fit_transform(df_cat)\n",
     "\n",
-    "# print(df_cat_onehot_encoded)\n",
-    "print(df_cat_onehot_encoded.shape)"
+    "cat_encoded\n",
+    "\n",
+    "labels = onehot_encoder.get_feature_names_out()\n",
+    "labels.shape\n",
+    "cat_encoded.shape\n",
+    "\n",
+    "# print(onehot_encoder.get_feature_names_out())\n",
+    "# print()\n",
+    "\n",
+    "# en we moeten daar terug een dataframe van maken\n",
+    "df_cat_encoded = pd.DataFrame(onehot_encoder.transform(df_cat),\n",
+    "                        columns=onehot_encoder.get_feature_names_out(),\n",
+    "                        index=df_cat.index)\n",
+    "\n",
+    "print(df_cat_encoded.head())\n",
+    "print(df_cat_encoded.shape)\n",
+    "\n"
    ]
   },
   {
