Al wat gespeeld met de data

--- a/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/CaseLogReg_20250205.ipynb
+++ b/cases/Cases_LogReg_Geert_HeartAttackRiskPrediction/CaseLogReg_20250205.ipynb
@@ -11,7 +11,7 @@
     "Doel:\n",
     "- Supervised Learning toepassen\n",
     "- EDA uitvoeren op een dataset\n",
-    "- Lineair Regression toepassen op de data\n",
+    "- Logistic Regression toepassen op de data voor classificatie\n",
     "\n",
     "Dataset: \n",
     "- More info: see kaggle https://www.kaggle.com/datasets/arifmia/heart-attack-risk-dataset\n",
