--- a/cases/UberVsLyft_PricePrediction/Uitwerking 250209.ipynb
+++ b/cases/UberVsLyft_PricePrediction/Uitwerking 250209.ipynb
@@ -159,17 +159,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "464562c6",
+   "metadata": {},
+   "source": [
+    "We only got missing values in [price] and that's the one I want to predict, so I will drop it."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d2ab687b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mdropna(subset\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprice\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.dropna(subset=['price'])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dsc_venv",
+   "display_name": "dscases_venv",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.7"
   },
   "papermill": {
    "default_parameters": {},
