Encodiing categorical variabels

--- a/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250205.ipynb
+++ b/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250205.ipynb
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -878,19 +878,25 @@
        "      <th>charges</th>\n",
        "      <th>sex</th>\n",
        "      <th>smoker</th>\n",
-       "      <th>regio</th>\n",
+       "      <th>northeast</th>\n",
+       "      <th>northwest</th>\n",
+       "      <th>southeast</th>\n",
+       "      <th>southwest</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-1.438764</td>\n",
-       "      <td>-0.45332</td>\n",
+       "      <td>-0.453320</td>\n",
        "      <td>-0.908614</td>\n",
        "      <td>0.298584</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>southwest</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -898,9 +904,12 @@
        "      <td>0.509621</td>\n",
        "      <td>-0.078767</td>\n",
        "      <td>-0.953689</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>southeast</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -908,9 +917,12 @@
        "      <td>0.383307</td>\n",
        "      <td>1.580926</td>\n",
        "      <td>-0.728675</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>southeast</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -918,9 +930,12 @@
        "      <td>-1.305531</td>\n",
        "      <td>-0.908614</td>\n",
        "      <td>0.719843</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>northwest</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -928,24 +943,34 @@
        "      <td>-0.292556</td>\n",
        "      <td>-0.908614</td>\n",
        "      <td>-0.776802</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>northwest</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        age       bmi  children   charges sex smoker      regio\n",
-       "0 -1.438764  -0.45332 -0.908614  0.298584   0      1  southwest\n",
-       "1 -1.509965  0.509621 -0.078767 -0.953689   1      0  southeast\n",
-       "2 -0.797954  0.383307  1.580926 -0.728675   1      0  southeast\n",
-       "3 -0.441948 -1.305531 -0.908614  0.719843   1      0  northwest\n",
-       "4 -0.513149 -0.292556 -0.908614 -0.776802   1      0  northwest"
+       "        age       bmi  children   charges  sex  smoker  northeast  northwest  \\\n",
+       "0 -1.438764 -0.453320 -0.908614  0.298584  0.0     1.0        0.0        0.0   \n",
+       "1 -1.509965  0.509621 -0.078767 -0.953689  1.0     0.0        0.0        0.0   \n",
+       "2 -0.797954  0.383307  1.580926 -0.728675  1.0     0.0        0.0        0.0   \n",
+       "3 -0.441948 -1.305531 -0.908614  0.719843  1.0     0.0        0.0        1.0   \n",
+       "4 -0.513149 -0.292556 -0.908614 -0.776802  1.0     0.0        0.0        1.0   \n",
+       "\n",
+       "   southeast  southwest  \n",
+       "0        0.0        1.0  \n",
+       "1        1.0        0.0  \n",
+       "2        1.0        0.0  \n",
+       "3        0.0        0.0  \n",
+       "4        0.0        0.0  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,16 +1052,23 @@
     "    ('smoking_encoder', set_matplotlib_smoking_encoder)\n",
     "])\n",
     "\n",
+    "regio_transformer = Pipeline(steps=[\n",
+    "    ('regio', OneHotEncoder(handle_unknown=\"ignore\"))\n",
+    "])\n",
+    "\n",
+    "\n",
+    "\n",
     "preprocessing = ColumnTransformer([\n",
     "    (\"num\", num_pipeline, df_num_col),\n",
     "    (\"male_female\", male_female_transformer, ['sex']), \n",
-    "    (\"smoker\", smoking_transformer, ['smoker'])], \n",
+    "    (\"smoker\", smoking_transformer, ['smoker']), \n",
+    "    (\"regio\", regio_transformer, ['region'])],\n",
     "     remainder='passthrough')\n",
     "\n",
     "np_prepared =  preprocessing.fit_transform(df_original)\n",
     "\n",
     "# hacking !!!\n",
-    "df_prepared_col = ['age', 'bmi','children','charges','sex','smoker','regio']\n",
+    "df_prepared_col = ['age', 'bmi','children','charges','sex','smoker','northeast','northwest','southeast','southwest']\n",
     "\n",
     "df_prepared = pd.DataFrame(\n",
     "    np_prepared,\n",
