Eerste run zonder specials is ok

--- a/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250210.ipynb
+++ b/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250210.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,17 +896,42 @@
     "        test_rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "        test_r2 = r2_score(y_test, y_pred)\n",
     "        test_mape = mean_absolute_percentage_error(y_test, y_pred)\n",
-    "        results.append([name, mean_rmse, mean_r2, test_rmse, test_r2])\n",
-    "    df = pd.DataFrame(results, columns=['model', 'mean_rmse', 'mean_r2', 'test_rmse', 'test_r2'])\n",
+    "        results.append([name, mean_rmse, mean_r2, test_rmse, test_r2, test_mape])\n",
+    "    df = pd.DataFrame(results, columns=['model', 'mean_rmse', 'mean_r2', 'test_rmse', 'test_r2', 'test_mape\"'])\n",
     "\n",
     "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 317,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m10/02/2025 15:16:19 : Info : Train_test_split met stratefy = charges_cat\n",
+      "               model    mean_rmse   mean_r2    test_rmse   test_r2  test_mape\"\n",
+      "0  Linear Regression  6126.274424  0.725757  5956.342894  0.806929    0.413968\n",
+      "1              Lasso  6126.263748  0.725758  5956.469620  0.806920    0.413981\n",
+      "2              Ridge  6126.264010  0.725759  5956.496425  0.806919    0.413992\n",
+      "3      Random Forest  4956.997994  0.820776  4713.964344  0.879071    0.376728\n",
+      "4  Gradient Boosting  4770.832863  0.834189  4268.715369  0.900836    0.315129\n",
+      "5      Decision Tree  6700.088280  0.669360  5850.383924  0.813737    0.348618\n",
+      "6       XGBRegressor  5267.275726  0.797652  5058.168538  0.860766    0.418510\n",
+      "\u001b[0m10/02/2025 15:16:25 : Info : Regresison models with no stratefy\n",
+      "\u001b[0m10/02/2025 15:16:25 : Info :                model    mean_rmse   mean_r2    test_rmse   test_r2  test_mape\"\n",
+      "0  Linear Regression  6126.274424  0.725757  5956.342894  0.806929    0.413968\n",
+      "1              Lasso  6126.263748  0.725758  5956.469620  0.806920    0.413981\n",
+      "2              Ridge  6126.264010  0.725759  5956.496425  0.806919    0.413992\n",
+      "3      Random Forest  4956.997994  0.820776  4713.964344  0.879071    0.376728\n",
+      "4  Gradient Boosting  4770.832863  0.834189  4268.715369  0.900836    0.315129\n",
+      "5      Decision Tree  6700.088280  0.669360  5850.383924  0.813737    0.348618\n",
+      "6       XGBRegressor  5267.275726  0.797652  5058.168538  0.860766    0.418510\n"
+     ]
+    }
+   ],
    "source": [
     "X = df_prepared.copy()\n",
     "y = df_original['charges']\n",
