laatste push voor nieuwe file versie

--- a/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250210.ipynb
+++ b/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250210.ipynb
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,8 +686,7 @@
     "    }\n",
     "\n",
     "    results = []\n",
-    "    for name, model in models.items():\n",
-    "        \n",
+    "    for name, model in models.items():        \n",
     "        pipeline = Pipeline([\n",
     "            ('preprocessor', preprocessor),\n",
     "            ('poly', PolynomialFeatures(degree=1, include_bias=False)),\n",
@@ -697,14 +696,14 @@
     "        pipeline.fit(X_train, y_train)\n",
     "        y_pred = pipeline.predict(X_test)\n",
     "\n",
-    "        # mean_rmse = np.sqrt(-cross_val_score(model, X_train, y_train, cv=5, scoring='neg_mean_squared_error').mean())\n",
-    "        # mean_r2 = cross_val_score(model, X_train, y_train, cv=5, scoring='r2').mean()     \n",
+    "        mean_rmse = np.sqrt(-cross_val_score(model, X_train, y_train, cv=5, scoring='neg_mean_squared_error').mean())\n",
+    "        mean_r2 = cross_val_score(model, X_train, y_train, cv=5, scoring='r2').mean()     \n",
     "\n",
     "        test_rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "        test_r2 = r2_score(y_test, y_pred)\n",
     "        test_mape = mean_absolute_percentage_error(y_test, y_pred)\n",
-    "        results.append([name, test_rmse, test_r2, test_mape])\n",
-    "    df = pd.DataFrame(results, columns=['model', 'test_rmse', 'test_r2', 'test_mape\"'])\n",
+    "        results.append([name, mean_rmse, mean_r2, test_rmse, test_r2, test_mape])\n",
+    "    df = pd.DataFrame(results, columns=['model', 'mean_rmse', 'mean_r2', 'test_rmse', 'test_r2', 'test_mape\"'])\n",
     "\n",
     "    return df\n"
    ]
@@ -759,45 +758,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m10/02/2025 15:58:30 : Info : Train_test_split met stratefy = charges_cat\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\geert\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:697: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 6.302e+08, tolerance: 1.464e+07\n",
-      "  model = cd_fast.enet_coordinate_descent(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "               model    test_rmse   test_r2  test_mape\"\n",
-      "0  Linear Regression  4646.002397  0.882533    0.307566\n",
-      "1              Lasso  4645.593546  0.882553    0.307523\n",
-      "2              Ridge  4645.989784  0.882533    0.307589\n",
-      "3      Random Forest  4823.857121  0.873367    0.403143\n",
-      "4  Gradient Boosting  4368.847143  0.896130    0.312621\n",
-      "5      Decision Tree  7066.079116  0.728284    0.511326\n",
-      "6       XGBRegressor  5116.923498  0.857513    0.397980\n",
-      "\u001b[0m10/02/2025 15:58:32 : Info : Regresison models with stratefy\n",
-      "\u001b[0m10/02/2025 15:58:32 : Info :                model    test_rmse   test_r2  test_mape\"\n",
-      "0  Linear Regression  4646.002397  0.882533    0.307566\n",
-      "1              Lasso  4645.593546  0.882553    0.307523\n",
-      "2              Ridge  4645.989784  0.882533    0.307589\n",
-      "3      Random Forest  4823.857121  0.873367    0.403143\n",
-      "4  Gradient Boosting  4368.847143  0.896130    0.312621\n",
-      "5      Decision Tree  7066.079116  0.728284    0.511326\n",
-      "6       XGBRegressor  5116.923498  0.857513    0.397980\n"
+      "0  Linear Regression  5956.342894  0.806929    0.413968\n",
+      "1              Lasso  5956.469554  0.806920    0.413981\n",
+      "2              Ridge  5956.496377  0.806919    0.413992\n",
+      "3      Random Forest  4729.965694  0.878249    0.392427\n",
+      "4  Gradient Boosting  4268.283018  0.900856    0.315065\n",
+      "5      Decision Tree  5912.108673  0.809786    0.388309\n",
+      "6       XGBRegressor  5007.415968  0.863546    0.415894\n",
+      "\u001b[0m10/02/2025 16:06:28 : Info : \n",
+      "\u001b[0m10/02/2025 16:06:28 : Info : Regression models with polynomial features\n",
+      "\u001b[0m10/02/2025 16:06:31 : Info :                model    test_rmse   test_r2  test_mape\"\n",
+      "0  Linear Regression  5956.342894  0.806929    0.413968\n",
+      "1              Lasso  5956.469554  0.806920    0.413981\n",
+      "2              Ridge  5956.496377  0.806919    0.413992\n",
+      "3      Random Forest  4729.965694  0.878249    0.392427\n",
+      "4  Gradient Boosting  4268.283018  0.900856    0.315065\n",
+      "5      Decision Tree  5912.108673  0.809786    0.388309\n",
+      "6       XGBRegressor  5007.415968  0.863546    0.415894\n"
      ]
     }
    ],
@@ -817,15 +802,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m10/02/2025 16:01:32 : Info : extra feature engineering: charges omzetten naar categories : bins=[0, 20000, 30000, 50000, np.inf\n",
-      "\u001b[0m10/02/2025 16:01:32 : Info : Train_test_split met stratefy en polynomial features = charges_cat\n",
+      "\u001b[0m10/02/2025 16:06:48 : Info : extra feature engineering: charges omzetten naar categories : bins=[0, 20000, 30000, np.inf\n",
       "               model    test_rmse   test_r2  test_mape\"\n",
       "0  Linear Regression  6528.468489  0.720580    0.433419\n",
       "1              Lasso  6528.395243  0.720587    0.433406\n",
@@ -834,8 +818,9 @@
       "4  Gradient Boosting  4784.958831  0.849897    0.279509\n",
       "5      Decision Tree  6802.446036  0.696636    0.345666\n",
       "6       XGBRegressor  5380.070126  0.810238    0.355567\n",
-      "\u001b[0m10/02/2025 16:01:33 : Info : Regresison models with stratefy\n",
-      "\u001b[0m10/02/2025 16:01:33 : Info :                model    test_rmse   test_r2  test_mape\"\n",
+      "\u001b[0m10/02/2025 16:06:49 : Info : \n",
+      "\u001b[0m10/02/2025 16:06:49 : Info : Regression models polynomial features en stratify on charges_cat\n",
+      "\u001b[0m10/02/2025 16:06:49 : Info :                model    test_rmse   test_r2  test_mape\"\n",
       "0  Linear Regression  6528.468489  0.720580    0.433419\n",
       "1              Lasso  6528.395243  0.720587    0.433406\n",
       "2              Ridge  6528.458919  0.720581    0.433432\n",
