Opschoning van de code

--- a/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250211.ipynb
+++ b/cases/Cases_LinReg_Geert_MedicalCostPrediction/CaseLinReg_20250211.ipynb
@@ -88,7 +88,7 @@
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.metrics import  mean_absolute_percentage_error\n",
+    "from sklearn.metrics import mean_absolute_percentage_error\n",
     "\n",
     "# Visualization\n",
     "import matplotlib.pyplot as plt\n",
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# maak een boxplot van een kolommen\n",
+    "# functie: maakt een boxplot van kolommen in een pandaframe\n",
     "# df_num_col is een list van de kolomnamen die geplot worden\n",
     "\n",
     "def plot_boxplot(df, df_col, filenaam):\n",
@@ -257,7 +257,7 @@
     "\n",
     "\n",
     "# hulp klasse om categorische waarden met twee mogelijke waarde naar 0 en 1 om te zetten\n",
-    "# try-out om zelf eens een  encoder te schrijven\n",
+    "# was een try-out om zelf eens een encoder te schrijven\n",
     "# kan uiteraard eenvoudiger door OneHotEncoding toe te passen\n",
     "\n",
     "class BinaryValueEncoder(TransformerMixin, BaseEstimator):\n",
